--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,13 @@
-[workspace]
-members = [
-    "aoc2022",
-]
+[package]
+name = "advent_of_code_2022"
+version = "0.1.0"
+edition = "2021"
+authors = ["R. Middel <r.middel@mrbussy.eu>"]
+description = "My implementation of the Advent of Code"
+license = "MIT/Apache-2.0"
+repository = "https://fs.mrbussy.eu:12080/rudi/aoc"
+readme = "README.md"
+
+[dependencies]
+aoc-runner="0.3.0"
+aoc-runner-derive="0.3.0"
