--- a/.github/workflows/readme-stars.yml
+++ b/.github/workflows/readme-stars.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: k2bd/advent-readme-stars@v1
         with:
-          userId: 1913257
-          leaderboardId: 1913257-5b9f209b
+          userId: ${{ secrets.AOC_UID }}
+          leaderboardId: ${{ secrets.AOC_LEADERBORD }}
           sessionCookie: ${{ secrets.AOC_SESSION }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
