--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ readme = "README.md"
 [dependencies]
 aoc-runner="0.3.0"
 aoc-runner-derive="0.3.0"
+camino = "1.1.1"
 itertools = "0.10.5"
+nom = "7"
 regex = "1.7.0"
