--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,5 @@
 [toolchain]
-channel = "nightly-stable-x86_64-apple-darwin"
+#channel = "stable-x86_64-apple-darwin"
+channel="nightly-x86_64-apple-darwin"
 components = [ "rustfmt", "rustc-dev" ]
 profile = "minimal"
